rename to meeting without s
