# docs/openapi.yml
@@ -46,7 +46,7 @@ paths:
         "200":
           description: OK
 
-  "/meetings/{meetingId}/comments":
+  "/meeting/{meetingId}/comments":
     parameters:
       - $ref: "#/components/parameters/meetingId"
     get:
@@ -67,7 +67,7 @@ paths:
         "404":
           description: Not Found
 
-  "/meetings/{meetingId}/reactions":
+  "/meeting/{meetingId}/reactions":
     parameters:
       - $ref: "#/components/parameters/meetingId"
     get:
